tests/macros/input/extension.stderr
error: option `extension` does not exist for kind `input`
 --> $DIR/extension.rs:2:43
  |
2 |     let q = discourse::questions![Input { extension: todo!() }];
  |                                           ^^^^^^^^^
