tests/macros/input/extension.rs
fn main() {
    let q = discourse::questions![Input { extension: todo!() }];
}
